tests/errors/legacy_attribute.ml
let value = 1 [@@coq_axiom]
